# ChangeLog for games-emulation/retroarch
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Minor metadata update.

  08 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> -retroarch-0.9.8.ebuild:
  Removed cruft.

  08 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Updated metadata.

*retroarch-0.9.9 (07 Jun 2013)
*retroarch-0.9.8-r2 (07 Jun 2013)

  07 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.8-r2.ebuild,
  +retroarch-0.9.9.ebuild, retroarch-9999.ebuild,
  +files/retroarch-0.9.9-build.patch:
  Bumped. Fixed python flag. Updated deps.

*retroarch-0.9.8-r1 (21 May 2013)

  21 May 2013; Michał Ziąbkowski <mziab@o2.pl> -retroarch-0.9.6-r1.ebuild,
  -retroarch-0.9.7.ebuild, +retroarch-0.9.8-r1.ebuild, retroarch-9999.ebuild,
  -files/retroarch-0.9.6-build.patch, -files/retroarch-0.9.7-build.patch:
  Removed old versions. Removed the dynamic USE flag. Due to the multitude of
  libretro ports available, it makes little sense to have a hard dependency on
  any one of them, so dynamic loading is always on.

*retroarch-0.9.8 (20 Feb 2013)

  20 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.8.ebuild,
  +files/retroarch-0.9.8-build.patch, retroarch-9999.ebuild,
  files/retroarch-9999-build.patch:
  Bumped. Fixed patch in live ebuild.

  11 Nov 2012; Michał Ziąbkowski <mziab@o2.pl> retroarch-9999.ebuild,
  +files/retroarch-9999-build.patch, +files/retroarch-9999-python.patch:
  Updated live git ebuild and patches.

*retroarch-0.9.7 (23 Sep 2012)

  23 Sep 2012; Michał Ziąbkowski <mziab@o2.pl> -retroarch-0.9.5.ebuild,
  -retroarch-0.9.6.ebuild, +retroarch-0.9.7.ebuild,
  +files/retroarch-0.9.7-build.patch, retroarch-9999.ebuild,
  -files/retroarch-build.patch:
  Bumped. Fixed 9999 ebuild. Removed cruft.

*retroarch-0.9.6-r1 (24 Jun 2012)

  24 Jun 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.6-r1.ebuild,
  retroarch-9999.ebuild: