@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jul 2013; Michał Ziąbkowski <mziab@o2.pl> retroarch-0.9.8-r1.ebuild,
+  retroarch-0.9.8-r2.ebuild, retroarch-0.9.9.ebuild, retroarch-9999.ebuild:
+  Repo moved. Updated URI.
+
   10 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
   Minor metadata update.
 
